z-index fixes and removal of unnecessary portion

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,4 +1,6 @@
 .header {
+  z-index: -1;
+  position: relative;
   padding: 30px 80px 40px;
   height: 800px;
   display: flex;
@@ -31,6 +33,7 @@
   line-height: 72px;
   letter-spacing: -0.6px;
   max-width: 729px;
+  z-index: -1;
 }
 
 .header__span-accent {
