--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -8,7 +8,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1180px;
 }
 
 .menu__title {
